@@ -3,6 +3,7 @@
 x.x:
 
 - added: plugin setting to indicate if a group is hidden
+- added: option to configure a group welcome message (#41)
 - fixed: layout issue in plugin settings
 - fixed: you can no join groups you were invited for on the group profile page
 - fixed: misleading translation for a group cleanup setting (#22)
